--- a/jenniferSoft/css/common.css
+++ b/jenniferSoft/css/common.css
@@ -251,6 +251,10 @@ header {transition: all ease 0.5s;  }
 	width: 100%;
 	height: 100%;
 	}
+div.bx-wrapper img {
+	min-width: 100%;
+	max-width: none;
+}
 .visual_bgc { 
 	top:0; right:0; bottom:0; left:0;
 	position: absolute;
@@ -287,7 +291,6 @@ div.bx-wrapper {
 
 /*  */
 .txt_btn {
-	border: 1px solid lime;
 	width: 128px;
 	height: 100%;
 	position: absolute;
