--- a/jenniferSoft/css/common.css
+++ b/jenniferSoft/css/common.css
@@ -144,6 +144,9 @@ header.queue > .header_inner > .head_nav > ul > li i {
 	border-top-color: #17181a;
 	opacity: .5;
 }
+header.queue > .header_inner > .head_nav > ul > li:last-child > a:hover{
+	color: #9245db;
+}
 header.queue > .header_inner > .head_nav > ul > li > a:hover i{
 	border-top-color: #9245db;
 	opacity: 1;
@@ -326,9 +329,11 @@ div.bx-wrapper {
 	text-indent: -9999px;
 	overflow: hidden;
 	left: 50%;
+	
 }
 .main_visual > .txt_btn.next > a {
-	transform: translateX(-50%) rotate(180deg);
+	transform: translate(-50%,-50%) rotate(180deg);
+	
 }
 .main_visual > .txt_btn:hover > a {
 	opacity: 1;
@@ -687,12 +692,13 @@ div.bx-wrapper {
 	height:64px;
 	border-radius: 50%;
 	display:block;
-	cursor: pointer;
 }
 .contact_box.queue { bottom:171px; }
+.box_mail_icon{border-radius: 50%;}
 .box_mail_icon > a {
 	display: block;
-	
+	height:64px;
+	border-radius:50% ;
 }
 .box_mail_icon > a > span {
 	position: absolute;
@@ -806,7 +812,8 @@ div.bx-wrapper {
 	background: url('../images/ic-expand-more.png')no-repeat;
 }
 
-.license_option  { display: none;
+.license_option  { 
+	display: none;
 	position: absolute;
 	top:18px;
 	left: 0	;
@@ -817,7 +824,15 @@ div.bx-wrapper {
 	border-radius: 4px;	
 	border: 1px solid rgba(0,0,0,.12);
 	z-index: 100;
-} /*--> active 를 붙여준다!!  */
+} 
+.license.active > .license_option {
+	display: block;
+}
+
+.license.active > .license_option > a:hover {
+	background-color:rgba(146,69,219,.1);
+	color:#9245db;
+}
 .license_option > a {
 	display: block;
 	color: #242635;
@@ -863,8 +878,9 @@ div.bx-wrapper {
 	display: block;
 	line-height: 16px;
 	font-size: 12px;
+	cursor: pointer;
 }
-.box_footer_check > span {color: #17181a;}
+.box_footer_check > span {color: #17181a; font-weight: 400;}
 .box_footer_check_btn {
 	border:1px solid #959595;
 	background-color: #fff;
@@ -1003,9 +1019,17 @@ div.bx-wrapper {
 		display:block;
 		background-color:#fff ;
 		height: 2px;
+		transition:transform 180ms cubic-bezier(.04,.04,.12,.96)
 	}
-	.ham_btn.on span {
+	.ham_btn.queue span{background-color: #17181a;}
+	.ham_btn.on span.short,.ham_btn.on span.long{
 		background-color: #17181a;
+		width: 24px;
+		transform: rotate(45deg);
+		transition:transform 180ms cubic-bezier(.04,.04,.12,.96)
+	}
+	.ham_btn.on span.long {
+		transform: rotate(-45deg) translate(5px,-5px);
 	}
 	.ham_btn .short {
 		width:16px;
@@ -1069,21 +1093,17 @@ div.bx-wrapper {
 	.txt_btn.prev:hover {
 		background-image: none;
 	}
-	.txt_btn > a {
-		width: 31px;
+	.main_visual > .txt_btn > a {
+		width: 32px;
 		height: 45px;
 		background: url('../images/arrows-left-mobile.svg') no-repeat center;
 		vertical-align: middle;
-
-	
 	}
 	.txt_btn.prev > a {
-		
-		margin-left: -8px;
+		left: 23px;	
 	}
 	.txt_btn.next > a {
-		
-		margin-right: -8px;
+		left: 8px;
 	}
 	/* main_content */
 	.main_content {padding:96px 32px;}
@@ -1282,6 +1302,67 @@ div.bx-wrapper {
 	.box_mail_icon {
 		box-shadow: 0 8px 8px 0 rgba(146,69,219,.1);
 	}
+
+	.box_mail_icon.on{
+		position: fixed;
+		bottom: 0;
+		left: 15px;
+		width: 91px;
+		z-index: 1500;
+		border-radius: 0;
+		height: 42px;
+		text-align: center;
+		box-shadow: none;
+	}
+
+	.box_mail_icon.on::before{
+		content: '취소';
+		margin: 0 auto;
+		color: #9245db;
+		font-size: 14px;
+		font-weight: 700;
+		line-height: 42px;
+
+		
+	}
+	.box_mail_icon.on:hover{
+		background-color: rgba(146,69,219,.1);
+		border-radius:4px
+	}
+
+	.box_mail_icon.on > a > span{
+		background-image: none;
+		width: 100%;
+		height: 100%;
+	}
+	.box_wrap.on {
+		position: fixed;
+		height: 100%;
+		width: 100%;
+		bottom: 0;
+		transition:height 0s,opacity .8s,bottom .8s;
+
+	}
+	.box_wrap.on > .box_header{
+		border-top-left-radius:0;
+		border-top-right-radius:0;
+	}
+	.box_wrap.on > .box_footer{
+		position: absolute;
+		bottom: 0;
+		left: 0;
+		right: 0;
+	}
+	.box_wrap.on .box_footer_check > a {
+		display: block;
+		margin-left: 24px;
+	}
+	.box_wrap.on button.box_footer_btn {
+		border-color: transparent;
+		position: absolute;
+		right: 0;
+		bottom: 0;
+	} 
 }
 
 /* -------------------------------------------------------------- */
