라이센스 글자 담기 해보기!!
라이센스 글자 담기 해보기!!

--- a/jenniferSoft/css/common.css
+++ b/jenniferSoft/css/common.css
@@ -1397,6 +1397,9 @@ div.bx-wrapper {
 		max-width: 100%;
 		height: auto;
 	}
+	.contact_box.queue {
+		bottom: 24px;
+	}
 }
 /* 826이하 -------------------------------*/
 @media screen and (max-width:841px) {
