--- a/jenniferSoft/css/common.css
+++ b/jenniferSoft/css/common.css
@@ -245,18 +245,23 @@ header {transition: all ease 0.5s;  }
 	position: relative;
 	overflow: hidden;
 }
-
-.visual_photo > ul > li > img {
-	position: absolute;
+.visual_photo{border: 1px solid red; height: 100%;}
+/* .visual_photo > ul > li > img {
+	
 	top:0;
 	left:50%;
 	transform: translateX(-50%);
 	width: 100%;
-	height: 100%;
-	}
+	} */
+div.bx-wrapper {
+	border: none;
+	box-shadow: none;
+
+}
 div.bx-wrapper img {
-	min-width: 100%;
-	max-width: none;
+	max-width: 100%;
+	height: auto;
+
 }
 .visual_bgc { 
 	top:0; right:0; bottom:0; left:0;
@@ -264,10 +269,7 @@ div.bx-wrapper img {
 	background:radial-gradient(circle at 50% 52%,rgba(0,0,0,.3),rgba(0,0,0,.45));
 }
 
-div.bx-wrapper {
-	border: none;
-	box-shadow: none;
-}
+
 /*  */
 .visual_content {
 	position: absolute;
