--- a/Microsoft/css/common.css
+++ b/Microsoft/css/common.css
@@ -36,7 +36,6 @@ header > div, main > div, footer> div {margin: 0 auto;}
     border-bottom: 2px solid #262626;
 }
 .main_inner > div > div, .main_inner>div >h2, .footer_inner > * > div {
-    outline: 1px solid lime;
     max-width:1600px;
     padding: 0 5%;
     margin:48px auto 0;
@@ -104,7 +103,7 @@ header {padding: 0 5%; margin-bottom: 2px;}
     border:1px solid #e6e6e6;
     box-sizing:border-box;
     z-index:10;
-    /* display: none; */
+    display: none;
 }
 .site_map.open {display: block;}
 .site_map > li {
@@ -241,32 +240,51 @@ header {padding: 0 5%; margin-bottom: 2px;}
 .slide01 .content_btn {
     margin-top:24px
 }
-.content_more {
-    background-color: #000;
-    color: #fff;
-    padding: 10px 31px 6px 26px;
-    float: left;
-    text-align: center;
-    margin-right: 24px;
-    border:2px solid transparent;
-    cursor: pointer;
-}
-.content_more > span {line-height: 18.5px; font-weight:600}
-.content_more > span::after {
-    content: '';
+.content_btn > * {float: left;}
+.content_btn > div > a {
+    font-size: 15px;
+    font-weight: 600;
+    padding: 10px 20px 6px 22px;
     display: inline-block;
-    width: 7px; height: 7px;
-    border-top: 1.4px solid #fff;
-    border-right: 1.4px solid #fff;
-    transform:rotate(45deg) translate(3px, -4px);
+    background-color: #000;
+    border: 2px solid #000;
+    line-height: 1.3;
 }
-.content_more.blan {
+.slide01 .content_more {
+    margin-right: 24px;
+}
+
+.content_btn > div > a > span {
+    color: #fff; 
+    font-weight:600;
+    line-height: 19.5px;
+    font-size: 15px;
+    vertical-align: middle;
+    display: inline-block;
+    transition: all 200ms ease-in-out;
+}
+.content_btn > div > a.content_more::after {
+    border-color: #fff;
+    position: relative;
+    transition: all 200ms ease-in-out;
+}
+.content_btn > div:hover > a::after {
+    right: -4px;
+}
+.content_btn > div:hover > a.content_more > span {
+    left: -4px;
+}
+.content_btn > div > .blan {
     background-color: transparent;
-    color: #000;
     padding:10px 57px 7px 25px;
+    border: 0;
 }
-.content_more.blan> span::after {
+.content_btn > div > a.blan > span {
+    color: #000;
+}
+.content_btn > div > a.blan::after {
     border-color: #000;
+    position: relative;
 }
 
 /* slide_btn_box */
@@ -386,33 +404,20 @@ header {padding: 0 5%; margin-bottom: 2px;}
 }
 
 /* main_contents ---- */
-.main_contents {
-    background-color: lightsteelblue;
-}
-.main_contents > div {
-    background-color: gold;
-}
 .section_list { 
     outline: 1px solid red;
     padding-left: 0;
     padding-right: 0;
-}
-.section_list:nth-child(1) {
+    width:calc(100% + 24px);
     margin-left: -12px;
 }
 .contents_sec {
-    outline: 1px solid blue;
     width: 25%;
     float: left;
     box-sizing: border-box;
     cursor: pointer;
     padding: 0 12px;
 }
-.contents_sec > div {
-    background-color: yellowgreen;
-    
-}
-.contents_sec > div > * {outline: 1px solid red;}
 .contents_sec > div >  img {
     width: 100%;
     margin-bottom: 37px;
@@ -457,14 +462,14 @@ header {padding: 0 5%; margin-bottom: 2px;}
 .section_btn:hover > a {
     border-bottom: 2px solid #0067b8;;
 }
-.section_btn span::after, .sotre_buy_btn > a::after {
+.section_btn span::after, .sotre_buy_btn > a::after, .content_btn > div > a::after {
     content: "";
-    position: absolute;
-    width: 8px; height: 8px;
+    display: inline-block;
+    width: 7px; height: 7px;
     border-top: 1px solid #0067b8;
     border-right: 1px solid #0067b8;
     transform: rotate(45deg);
-    top: 6px;
+    vertical-align: middle;
 }
 /* main_hero store -- */
 .main_hero.store > .store_photo , .main_hero.store > .store_contents {
@@ -481,47 +486,52 @@ header {padding: 0 5%; margin-bottom: 2px;}
     margin-top: 0 !important;
 }
 .store_contents_inner {
-    outline: 1px solid yellow;
     position: absolute;
     top: 50%; left: 100px;
     transform: translateY(-50%);
 }
+.store_contents_inner > * {color: #fff;}
 .store_contents_inner > h1 {
     font-size: 46px;
     font-weight: 600;
-    color: #fff;
     line-height: 56px;
     padding: 2px 0 3px;
 }
 .store_contents_inner > p {
-    color: #fff;
     margin:12px 0 24px
 }
 .sotre_buy_btn {
     position: relative;
 }
-.sotre_buy_btn > * {display: inline-block;}
 .sotre_buy_btn > a {
     font-size: 15px;
     font-weight: 600;
-    position: absolute;
     padding: 10px 20px 6px 22px;
     background-color: #fff;
+    display: inline-block;
 }
 .sotre_buy_btn:hover > a{
     background-color: #e6e6e6;
-    text-decoration-line: underline;
-}
-.sotre_buy_btn > div > span {
-    outline: 1px solid red;
-    width: 10px; height: 10px;
-    position: relative;
 }
 .sotre_buy_btn > a::after {
     border-color: #000;
-    top: 5px;
-    transition: all 200ms ease-in-out
+    position: relative;
+    display:inline-block;
+    transition: all 200ms ease-in-out;
 }
+.sotre_buy_btn:hover > a::after {
+    right: -4px;
+}
+.sotre_buy_btn > a > span {
+    display: inline-block;
+    transition: all 200ms ease-in-out;
+}
+.sotre_buy_btn:hover > a > span {
+    position: relative;
+    left: -4px;
+    text-decoration-line: underline;
+}
+
 /* main_contents user */
 .main_contents.user > h2 {
     font-size: 24px;
@@ -532,20 +542,13 @@ header {padding: 0 5%; margin-bottom: 2px;}
     margin-top: 0;
 }
 /* main_social ------ */
-.main_social_inner {
-    background-color: coral;
-}
 .main_social_inner > * {
     float: left;
 }
 .main_social_inner > p {
     color:rgba(0,0,0,.6);
     margin-right: 12px;
-    background-color: blueviolet;
     line-height: 32px;
-}
-.social_btn {
-   outline: 1px solid black;
 }
 .social_btn > li {
     float: left;
@@ -553,7 +556,7 @@ header {padding: 0 5%; margin-bottom: 2px;}
 .social_btn > li > a {
     display: block;
     box-sizing: border-box;
-    width: 32px; height: 32px;
+    width: 27px; height: 27px;
     margin-right: 12px;
     border: 2px solid transparent;
     transition: scale .2s ease-in-out;
@@ -571,15 +574,64 @@ header {padding: 0 5%; margin-bottom: 2px;}
 
 /* footer ------------------------------------------------------------------ */
 .footer_inner{
-    background-color: aqua;
-}
-.footer_nav_inner > .site_map {
     background-color: #f2f2f2;
-    display: block;
-    position: static;
 }
-.footer_nav_inner > .site_map > li:last-child {
-    position: static;
+.footer_map ,.footer_map_sub > li > a {
+    color: #616161;
 }
-/* site_map ------------- */
+/* footer_map ------------- */
+.footer_map > li {
+    width: 16.666%;
+    float: left;
+}
+.footer_map > li > h3 {
+    font-weight: 600;
+    padding: 36px 0 4px;
+}
+.footer_map_sub > li { 
+    padding: 8px 0;
+    line-height: 16px;
+}
+.footer_map_sub > li > a {
+    font-size: 11px;
+}
+.footer_map_sub > li > a:hover, .footer_etc_inner > * a:hover {
+    text-decoration-line: underline;
+}
 
+/* footer_etc */
+.footer_inner > .footer_etc > .footer_etc_inner {
+    margin-top: 0 !important;
+    padding: 30px 5% 16px;
+}
+.footer_etc_inner > * a {
+    color: #616161;
+    font-size: 11px;
+}
+.footer_etc_lang {
+    float: left;
+}
+.footer_etc_lang > a {
+    display: inline-block;
+    line-height: 24px;
+}
+.footer_etc_lang > a::before {
+    content: '';
+    display: inline-block;
+    width: 20px; height: 24px;
+    background-image: url('../images/globe-americas-solid.svg');
+    background-repeat: no-repeat;
+    background-position: center;
+    vertical-align:middle;
+    margin-right: 10px;
+}
+.footer_ect_coppyright {
+    float: right;
+}
+.footer_ect_coppyright > ul > li {
+    float: left;
+    padding:0 24px 4px 0;
+    font-size: 11px;
+    color: #616161;
+}
+ 
